updated readme file and removed java options