@@ -27,12 +27,6 @@ Test / parallelExecution := false
 
 // set the main class for 'sbt run'
 Compile / run / mainClass := Some("org.bgc.uk.SparkScalaBcgMainApp")
-/*javaOptions ++= Seq(
-  "-Xms512M",
-  "-Xmx2048M",
-  "-XX:MaxPermSize=2048M",
-  "-XX:+CMSClassUnloadingEnabled"
-)*/
 
 ThisBuild / assemblyMergeStrategy := {
   case PathList("META-INF", xs @ _*) => MergeStrategy.discard
